--- a/app/src/main/res/layout/item_feature.xml
+++ b/app/src/main/res/layout/item_feature.xml
@@ -37,27 +37,27 @@
                 app:layout_constraintEnd_toEndOf="parent"/>
 
             <com.google.android.material.card.MaterialCardView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="44dp"
+                android:layout_height="44dp"
                 android:layout_margin="@dimen/margin_small"
-                app:strokeWidth="0.5dp"
+                app:strokeWidth="1.0dp"
                 app:strokeColor="@android:color/white"
                 app:cardBackgroundColor="@color/colorPrimary"
                 app:cardElevation="0dp"
-                app:cardCornerRadius="20dp"
+                app:cardCornerRadius="22dp"
                 app:layout_constraintEnd_toEndOf="@id/image"
                 app:layout_constraintBottom_toBottomOf="@+id/image">
 
                 <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_nav_elcipse_features"/>
+                    android:src="@drawable/ic_gesture"/>
 
             </com.google.android.material.card.MaterialCardView>
 
             <TextView
+                style="@style/HeaderText3"
                 android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -66,8 +66,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/image"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:fontFamily="sans-serif-medium"
-                android:textSize="@dimen/default_text_size"
                 app:stringId="@{eclipse.title()}"/>
 
             <Button
