--- a/app/src/main/res/layout/layout_eclipse_center.xml
+++ b/app/src/main/res/layout/layout_eclipse_center.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/rl_eclipse_center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/default_margin"
+                android:padding="@dimen/default_margin"
                 android:orientation="vertical"
                 android:gravity="center">
 
