--- a/app/src/main/res/layout/layout_walkthrough_three.xml
+++ b/app/src/main/res/layout/layout_walkthrough_three.xml
@@ -26,6 +26,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/guideline" >
 
         <ImageView
+            android:contentDescription="@string/walkthrough_eclipse_center_img_desc"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="?android:attr/actionBarSize"
