--- a/app/src/main/res/layout/activity_rumble_map_interaction.xml
+++ b/app/src/main/res/layout/activity_rumble_map_interaction.xml
@@ -21,6 +21,7 @@
             android:id="@+id/eclipse_img"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:contentDescription="@null"
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             android:layout_centerInParent="true"
