--- a/app/src/main/res/layout/item_about.xml
+++ b/app/src/main/res/layout/item_about.xml
@@ -27,6 +27,7 @@
             android:id="@+id/list_avatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@null"
             android:layout_centerVertical="true"
             android:layout_marginStart="@dimen/default_margin" />
 
@@ -34,6 +35,7 @@
             android:id="@+id/list_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@null"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="@dimen/default_margin"
