--- a/app/src/main/res/layout/item_media.xml
+++ b/app/src/main/res/layout/item_media.xml
@@ -29,6 +29,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:adjustViewBounds="true"
+                android:contentDescription="@string/eclipse_item_img_desc"
                 android:scaleType="centerCrop"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="16dp"
@@ -40,6 +41,7 @@
                 android:id="@+id/list_media_extra"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="@null"
                 android:adjustViewBounds="true"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
