--- a/app/src/main/res/layout/item_photo_credit.xml
+++ b/app/src/main/res/layout/item_photo_credit.xml
@@ -21,6 +21,7 @@
                android:id="@+id/photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
+               android:contentDescription="@string/eclipse_item_img_desc"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/default_margin"
